4.0.0 (December 17, 2024)
---------------------------
- Removed file.readChar
- Major fixes to __all__ variable in main __init__
- Did an overhaul on Licence and README.md
- major change in file structure
- Renamed getch to geky
- Put getch inside class "terd"
- Added a click detection function
- Updated and fixed __all__
- Added __init__.py for an entry point
- Moved __all__ and links to __init__.py
- Made functions satic methods
- Changed how random works
- Updated LocalServer error message
- Added a To_send variable to LocalServer
- Removed autoplay from frequency
- Fixed windows key detection
- Removed board and random
- Added security hashes
- Added badges to README.md

4.0.1 (Decmeber 17, 2024)
---------------------------
- Import fixes

4.0.2 (December 17, 2024)
---------------------------
- Click removed temporarily
- Updated build in version

4.0.4 (December 17, 2024)
---------------------------
- Import fixes
- Replaced 4.0.3, as it is the same

4.0.5 (Decmeber 17, 2024)
---------------------------
- Added back click

4.0.6 (Decmeber 17, 2024)
---------------------------
- Added windows implementation of click
- Fixed pybind11 missing module for pylint
- Added C++ linting

4.1.0 (December 18, 2024)
---------------------------
- Added *.txt to manifest.in
- Added C++ badge to github 
- Updated licence
- Fixed click bugs for windows
- Distributed .tar.gz, instead of a .whl
- Removed sound.generate()
- Changed sound.play() to psound()
- Changed mod_line() to fm_line()
- Placed dummy functions for removed functions, that serve warnings

4.1.1(December 19, 2024)
---------------------------
- Fixed README.md
- Forced warnings to occur, whether an error was caught or not
- Added clarity to warnings
- Moved b64 to encrypt
- Added sha256